# AnnieGodFather

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  version.sh
anniegodfather/: app.py  auth.py  clients.py  exceptions.py  logger.py  settings.py
anniegodfather/handlers/: __init__.py  commands.py  media.py  middleware.py
anniegodfather/proto/: anniedad.proto  anniedad_pb2.py  anniedad_pb2_grpc.py  anniegodfather.proto  anniegodfather_pb2.py  anniegodfather_pb2_grpc.py  auth.proto  auth_pb2.py  auth_pb2_grpc.py
godfather/: app.py  logger.py  settings.py
