[project]
name = "anniegodfather"
version = "0.1.0"
description = "Telegram bot for Annie project"
authors = [
    {name = "Sergey Voronov",email = "graf.voronov@gmail.com"}
]
readme = "README.md"
requires-python = "3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
